Semua halaman selesai, tinggal hit api

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,7 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap");
 
 @import "colorVariables";
 @import "functions";
@@ -43,204 +43,211 @@
 @import "utilities";
 @import "print";
 
-
 .brand-text-icon {
-    font-size: 26px;
-    font-weight: 500;
-    font-family: "Poppins", sans-serif;
-    color: $primary;
+  font-size: 26px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  color: $primary;
 }
 
 header {
-    border-bottom: 1px solid $gray-200;
-    width: 100%;
-    position: relative;
-    margin-bottom: 50px;
+  border-bottom: 1px solid $gray-200;
+  width: 100%;
+  position: relative;
+  margin-bottom: 50px;
 
-    .navbar {
-        height: 80px;
+  .navbar {
+    height: 80px;
 
-        .navbar-nav {
-            li.nav-item {
-                a {
-                    &.nav-link {
-                        color: $gray-900;
-                        padding-left: 1rem;
-                        padding-right: 1rem;
+    .navbar-nav {
+      li.nav-item {
+        a {
+          &.nav-link {
+            color: $gray-900;
+            padding-left: 1rem;
+            padding-right: 1rem;
 
-                        &:hover {
-                            text-decoration: underline;
-                        }
-                    }
-                }
+            &:hover {
+              text-decoration: underline;
             }
-
-            li.active {
-                a {
-                    &.nav-link {
-                        color: $primary;
-                    }
-                }
-            }
+          }
         }
+      }
+
+      li.active {
+        a {
+          &.nav-link {
+            color: $primary;
+          }
+        }
+      }
     }
+  }
 }
 
 section {
-    margin-bottom: 70px;
+  margin-bottom: 70px;
 }
 
 .img-cover {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .img-contain {
-    object-fit: contain;
-    height: 100%;
-    width: 100%;
+  object-fit: contain;
+  height: 100%;
+  width: 100%;
 }
 
 .card {
+  height: 100%;
+  border: solid 1px $gray-200;
+
+  .tag {
+    z-index: 3;
+    font-size: 0.875rem;
+    background-color: $pink;
+    padding: 0.25rem 1.25rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: $white;
+    min-height: 30px;
+    border-radius: 0 15px;
+
+    span {
+      font-weight: 300;
+    }
+  }
+
+  .img-wrapper {
     height: 100%;
+    margin-bottom: 0;
+    border-radius: 0.9375rem;
+    overflow: hidden;
+  }
 
-    .tag {
-        z-index: 3;
-        font-size: 0.875rem;
-        background-color: $pink;
-        padding: .25rem 1.25rem;
-        position: absolute;
-        top: 0;
-        right: 0;
-        color: $white;
-        min-height: 30px;
-        border-radius: 0 15px;
+  .meta-wrapper {
+    margin-top: 1rem;
 
-        span {
-            font-weight: 300;
-        }
+    h5 {
+      font-size: 1.125rem;
+      margin-bottom: 2px;
+    }
+
+    span {
+      font-size: 0.875rem;
+    }
+  }
+
+  &.card-featured {
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 15px;
+
+    &:after {
+      position: absolute;
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      transform: scale(1.1);
+      transition: 0.5s transform ease-in-out;
+      z-index: 2;
+      @include gradient-y(rgba($black, 0), rgba($black, 0.51), 0%, 100%);
     }
 
     .img-wrapper {
-        height: 100%;
-        margin-bottom: 0;
-        border-radius: 0.9375rem;
-        overflow: hidden;
+      z-index: 1;
+      margin: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      transform: scale(1.1);
+      transition: 0.25s transform ease-in-out;
     }
 
     .meta-wrapper {
-        margin-top: 1rem;
-
-        h5 {
-            font-size: 1.125rem;
-            margin-bottom: 2px;
-        }
-
-        span {
-            font-size: .875rem;
-        }
+      z-index: 4;
+      color: $white;
+      padding: 20px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      transform: translateY(0);
+      transition: 0.3s transform ease-in-out;
+      display: flex;
+      justify-content: flex-end;
+      flex-direction: column;
     }
 
-    &.card-featured {
-        overflow: hidden;
-        cursor: pointer;
-        border-radius: 15px;
+    &:hover {
+      .meta-wrapper {
+        transform: translateY(-10px);
+      }
 
-        &:after {
-            position: absolute;
-            content: "";
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            transform: scale(1.1);
-            transition: .5s transform ease-in-out;
-            z-index: 2;
-            @include gradient-y(rgba($black, 0), rgba($black, .51), 0%, 100%)
-        }
+      &:after {
+        transform: scale(1);
+      }
 
-        .img-wrapper {
-            z-index: 1;
-            margin: 0;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            transform: scale(1.1);
-            transition: .25s transform ease-in-out;
-        }
-
-        .meta-wrapper {
-            z-index: 4;
-            color: $white;
-            padding: 20px;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-            transform: translateY(0);
-            transition: .3s transform ease-in-out;
-            display: flex;
-            justify-content: flex-end;
-            flex-direction: column;
-        }
-
-        &:hover {
-            .meta-wrapper {
-                transform: translateY(-10px);
-            }
-
-            &:after {
-                transform: scale(1);
-            }
-
-            .img-wrapper {
-                transform: scale(1);
-            }
-        }
+      .img-wrapper {
+        transform: scale(1);
+      }
     }
+  }
 }
 
 .testimonial-hero,
 .testimonial-hero img {
-    width: 365px;
-    height: 500px;
+  width: 365px;
+  height: 500px;
 }
 
 footer {
-    border-top: 1px solid $gray-200;
-    padding-top: 50px;
+  border-top: 1px solid $gray-200;
+  padding-top: 50px;
 
-    .brand-tagline {
-        margin-top: 8px;
-        color: $gray-500;
-        font-weight: 300;
+  .brand-tagline {
+    margin-top: 8px;
+    color: $gray-500;
+    font-weight: 300;
+  }
+
+  .list-group-item {
+    padding: 0.3125rem 0;
+    border: 0;
+    a,
+    span {
+      color: $gray-500;
+      font-weight: 300;
     }
 
-    .list-group-item {
-        padding: 0.3125rem 0;
-        border: 0;
-        a,
-        span {
-            color: $gray-500;
-            font-weight: 300;
-        }
-
-        a {
-            @include hover-focus {
-                color: $gray-800;
-            }
-        }
-    } 
-    .copyrights {
-        margin: 50px 0;
-        font-weight: 300;
-        color: $gray-500;
+    a {
+      @include hover-focus {
+        color: $gray-800;
+      }
     }
+  }
+  .copyrights {
+    margin: 50px 0;
+    font-weight: 300;
+    color: $gray-500;
+  }
+}
+
+main {
+  p {
+    color: $gray-500;
+    font-weight: 300;
+  }
 }
 
 .frame-family {
-    border-radius: 15px 15px 50px 15px;
+  border-radius: 15px 15px 50px 15px;
 }
