--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -98,6 +98,16 @@ header {
             &.nav-link {
               color: $white;
             }
+
+            &.nav-link::after {
+              content: '';
+              display: block;
+              border-bottom: 3px solid $primary;
+              width: 50%;
+              margin: auto;
+              padding-bottom: 5px;
+              margin-bottom: -8px;
+            }
           }
         }
       }
